correccion de error que impedía iniciar el server